--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
 
     <div class="modal">
         <button class="close-modal">&times;</button>
-        <h1>I am a modal window</h1>
-        <p>VIRUS VIRUS VIRUS</p>
+        <h1>I love</h1>
+        <p>Shenhe</p>
     </div>
     <div class="overplay hidden"></div>
     <script src="script.js"></script>
